--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,12 +25,30 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+  #youtube_player_flutter: ^1.2.0
   flutter_test:
     sdk: flutter
 
+  #flutter_launcher_icons: ^0.7.2
+  animator: ^0.1.2
+  #firebase_core: ^0.2.5
+  firebase_core: ^0.4.0+3
+  firebase_analytics: ^3.0.2
+  #firebase_analytics: ^3.0.2
+  firebase_auth: ^0.11.1+5
 
+  cloud_firestore: ^0.12.2
+
+  google_sign_in: ^4.0.2
+
+  rxdart: ^0.22.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_icons:
+  android: "launcher_icon" 
+  ios: true
+  image_path: "assets/icon/logo.png"
 
 # The following section is specific to Flutter.
 flutter:
@@ -47,6 +65,10 @@ flutter:
   assets:
     - assets/
 
+fonts:
+    - family: iconmoon
+      fonts:
+        - assets: assets/fonts/icommon.ttfd
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
