--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -28,7 +28,6 @@ dev_dependencies:
   #youtube_player_flutter: ^1.2.0
   flutter_test:
     sdk: flutter
-
   #flutter_launcher_icons: ^0.7.2
   animator: ^0.1.2
   #firebase_core: ^0.2.5
@@ -42,6 +41,11 @@ dev_dependencies:
   google_sign_in: ^4.0.2
 
   rxdart: ^0.22.0
+  
+  shared_preferences: ^0.5.3+1
+  easy_localization: ^1.0.3+1
+
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -64,6 +68,8 @@ flutter:
   #  - images/a_dot_ham.jpeg
   assets:
     - assets/
+    - locale/en.json
+    - locale/es.json
 
 fonts:
     - family: iconmoon
