--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dev_dependencies:
 
   rxdart: ^0.22.0
   
+  google_maps_flutter: ^0.5.17
+  location: ^2.3.5
+    
   shared_preferences: ^0.5.3+1
   easy_localization: ^1.0.3+1
   flare_flutter:
