--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dev_dependencies:
   
   google_maps_flutter: ^0.5.17
   location: ^2.3.5
+  geolocator: '^5.0.0'
+  permission_handler: ^3.1.0
     
   shared_preferences: ^0.5.3+1
   easy_localization: ^1.0.3+1
