--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  json_annotation: ^2.0.0
 
 dev_dependencies:
   #youtube_player_flutter: ^1.2.0
@@ -33,6 +34,7 @@ dev_dependencies:
   #firebase_core: ^0.2.5
   firebase_core: ^0.4.0+3
   firebase_analytics: ^3.0.2
+  firebase_database: ^3.0.3
   #firebase_analytics: ^3.0.2
   firebase_auth: ^0.11.1+5
 
@@ -47,6 +49,9 @@ dev_dependencies:
   geolocator: '^5.0.0'
   permission_handler: ^3.1.0
     
+  build_runner: ^1.0.0
+  json_serializable: ^2.0.0
+
   shared_preferences: ^0.5.3+1
   easy_localization: ^1.0.3+1
   flare_flutter:
